Fri May  4 09:12:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/Sequence_TypeCode.h:
        * tao/AnyTypeCode/TypeCode_Case_Base_T.h:
        * tao/AnyTypeCode/Union_TypeCode.h:
        * tao/TypeCodeFactory/TypeCodeFactory_i.cpp:
          Layout changes

Thu May  3 13:08:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2804_Regression/Test.idl:
        * tests/Bug_2804_Regression/client.cpp:
          Simplified this test another step

Thu May  3 12:34:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2804_Regression/Test.idl:
          Simplified this file to the real minimum required to reproduce the
          bug

Thu May  3 10:09:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp:
          Fixed interoperability problems with TAO 1.3.x and the current
          version as reported in bugzilla 2918. The IDL compiler still
          needs to be done to also generate repeated typecodes for the
          given test case. Thanks to Patrick Spiering <pspiering at aweta dot nl>
          for delivering the patch

        * tao/DynamicInterface/Request.h:
        * tao/Messaging/AMI_Arguments_Converter_Impl.cpp:
        * tao/Messaging/Asynch_Invocation_Adapter.cpp:
          Layout changes

Wed May  2 14:05:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2918_Regression/*:
          New test for bug 2918, at this moment it works, but the test will
          be extended to detect whether the size of the marshalled any is
          too big or not.

        * tests/Bug_2289_Regression/server.cpp:
          Initialise pointer with 0

        * tests/IDL_Test/struct.idl:
          Added some more test cases

        * tests/OBV/Simple/run_test.pl:
          Extended wait time for slower systems

Wed May  2 14:02:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
